src/assets/themes/default-template.css
@charset "utf-8";
@import url(../../node_modules/material-icons/iconfont/material-icons.css);
@import url(../../node_modules/material-symbols/index.css);
@import url(https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap);

@import url(../../node_modules/spectrum-colorpicker2/dist/spectrum.css);
@import url(system-colors.css);

html {
  overflow: hidden;
  height: 100%;
}

body {
  overflow: hidden;
  height: 100%;
  margin: 0;
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: var(--sans-serif);
  font-size: var(--font-size);
}

.material-symbols-outlined {
  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
}

*:focus {
  outline: none;
}

::placeholder {
  color: var(--system-gray2);
}

::selection {
  color: var(--selection-color);
  background: var(--selection-background-color);
}

/* common */

.green {
  color: var(--system-green);
}

.red {
  color: var(--system-red);
}

.yellow {
  color: var(--system-yellow);
}

.modal {
  pointer-events: none;
}

textarea, input, button, select,
th, td,
.ui-widget, .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button, .ui-widget-content {
  border: none;
  padding: 0;
  background: none;
  font-family: var(--sans-serif);
  font-size: var(--font-size);
  color: var(--text-color);
}

.ui-widget label {
  position: relative;
  top: -2px;
  margin-left: 0.5em;
}

table {
  width: 100%;
}

th,
td {
  padding: 4px 8px;
}

tbody th {
  text-align: right;
  white-space: nowrap;
  min-width: 100px;
  width: auto;
}

tbody td {
  width: 100%;
}

tbody th th {
  min-width: unset;
  width: unset;
}

tbody td td {
  width: unset;
}

thead tr {
  background: var(--tint-color2);
}

tbody tr:nth-child(odd) {
  background: var(--tint-color1);
}

tbody tr:hover {
  background: var(--tint-color2);
}

td > input:not([type]),
td > input[type="text"],
td > input[type="number"] {
  width: 100%;
  border: 1px solid var(--tint-color1);
}

td > textarea {
  resize: vertical;
  width: 100%;
  height: 8em;
  border: 1px solid var(--tint-color1) !important;
}

td > select {
  border: 1px solid var(--tint-color1) !important;
}

td > div {
  border: 1px solid var(--tint-color1) !important;
}

.sticky-headers thead {
  position: sticky;
  top: 2px;
}

tr.disabled ~ tr input,
tr.disabled ~ tr textarea,
tr.disabled ~ tr select,
tr.disabled ~ tr button {
  pointer-events: none;
}

tr.disabled ~ tr > td > input,
tr.disabled ~ tr > td > textarea,
tr.disabled ~ tr > td > select,
tr.disabled ~ tr > td > button,
tr.disabled ~ tr > td > div {
  background: var(--background-disabled);
}

/* Highlight animation */

.highlight {
  animation: highlight 1000ms ease-out;
}

@keyframes highlight {
  0% {
    background-color: var(--system-red);
  }
}

/* Vertical splitter */

.vertical-splitter {
  overflow: hidden;
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.vertical-splitter-left,
.vertical-splitter-right {
  background-color: var(--background-color);
  position: absolute;
  box-sizing: border-box;
  top: 0;
  height: 100%;
}

.vertical-splitter-left {
  left: 0;
  width: 65%;
}

.vertical-splitter-right {
  right: 0;
  width: 35%;
}

.vertical-splitter-left > .ui-resizable-e {
  cursor: col-resize;
}

.vertical-splitter-left > .ui-resizable-e > div {
  position: relative;
  left: 0px;
  width: 4px;
  height: 100%;
}

.vertical-splitter-left > .ui-resizable-e:hover > div {
  animation: highlight-splitter 1000ms ease-out;
  animation-fill-mode: forwards;
}

.vertical-splitter-left > .ui-resizable-e:active > div {
  background-color: var(--accent-color);
}

@keyframes highlight-splitter {
  100% {
    background-color: var(--accent-color);
  }
}

#vertical-splitter > .vertical-splitter-left {
  width: 65%;
}

#vertical-splitter > .vertical-splitter-right {
  width: 35%;
}

/* Horizontal splitter */

.horizontal-splitter {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.horizontal-splitter-top,
.horizontal-splitter-bottom {
  background-color: var(--background-color);
  position: absolute;
  box-sizing: border-box;
  left: 0;
  width: 100%;
}

.horizontal-splitter-top {
  top: 0;
  height: 60%;
}

.horizontal-splitter-bottom {
  bottom: 0;
  height: 40%;
}

.horizontal-splitter-top > .ui-resizable-s {
  cursor: row-resize;
}

.horizontal-splitter-top > .ui-resizable-s > div {
  position: relative;
  top: 1px;
  height: 4px;
}

.horizontal-splitter-top > .ui-resizable-s:hover > div {
  animation: highlight-splitter 1000ms ease-out;
  animation-fill-mode: forwards;
}

.horizontal-splitter-top > .ui-resizable-s:active > div {
  background-color: var(--accent-color);
}

#horizontal-splitter > .horizontal-splitter-top {
  height: 60%;
}

#horizontal-splitter > .horizontal-splitter-bottom {
  height: 40%;
}

/* Tabs */

.ui-tabs {
  position: absolute;
  inset: 0;
  border: 0;
  padding: 0;
  background: inherit;
}

.ui-tabs.ui-widget.ui-widget-content {
  border: none;
}

.ui-tabs > .ui-tabs-nav {
  display: flex;
  justify-content: center;
  box-sizing: border-box;
  border: 0;
  border-radius: 0;
  padding: 0;
  height: var(--tabs-height);
  width: 100%;
  background: inherit;
  z-index: 2000;
}

.ui-tabs.top > .ui-tabs-nav {
  border-bottom: var(--tool-border);
}

.ui-tabs.bottom > .ui-tabs-nav {
  position: absolute;
  bottom: 0;
  border-top: var(--tool-border);
}

.ui-tabs > .ui-tabs-nav li,
.ui-tabs > .ui-tabs-nav .ui-tabs-active,
.ui-tabs > .ui-tabs-nav .ui-tabs-anchor {
  margin: 0;
  border: 0;
  padding: 0;
  border-radius: 0;
  background: none;
  color: var(--text-color);
  user-select: none;
  font-size: var(--small-font-size);
}

.ui-tabs > .ui-tabs-nav li,
.ui-tabs > .ui-tabs-nav .ui-tabs-active {
  -box-sizing: border-box;
  height: 100%;
  padding: 7px 10px 0 10px;
}
/* ... */

